--- a/web/templates/torrent/torrentMedia.html.eex
+++ b/web/templates/torrent/torrentMedia.html.eex
@@ -12,7 +12,7 @@
                             onclick="openModal('<%= torrent.id %>myModal');currentSlide('<%= torrent.id %>myModal', <%= Enum.find_index(torrent.json["images"], fn(x) -> x == img end) +1 %>)" alt="<%= img %>">
           <% end %>
         <% end %>
-      <div>
+      </div>
 
     <div id="<%= torrent.id %>myModal" class="modal" >
 
@@ -34,12 +34,18 @@
           </div>
         </div>
 
-        <%= for img <- torrent.json["images"] do %>
-          <div class="column">
-            <img class="lazy lightbox cursor" class="lazy" data-src="images/<%= img |> String.trim |> String.replace("http://", "") |> String.replace("http://", "") |> URI.decode() %>"
-                            width:100% onclick="currentSlide('<%= torrent.id %>myModal', <%= Enum.find_index(torrent.json["images"], fn(x) -> x == img end) +1 %>)" alt="<%= img %>">
-          </div>
-        <% end %>
+        <img class="lazy coverImage lightbox cursor"
+           data-src="images/<%= torrent.json["images"] |> Enum.at(0) |> String.trim |> String.replace("http://", "") |> String.replace("http://", "") |> URI.decode() %>"
+           onclick="currentSlide('<%= torrent.id %>myModal', 1)" />
+
+        <div class="moreImages">
+          <%= for img <- torrent.json["images"] do %>
+            <%= if Enum.find_index(torrent.json["images"], fn(x) -> x == img end) > 0 do %>
+              <img class="lazy additionalImage lightbox cursor" class="lazy" data-src="images/<%= img |> String.trim |> String.replace("http://", "") |> String.replace("http://", "") |> URI.decode() %>"
+                             onclick="currentSlide('<%= torrent.id %>myModal', <%= Enum.find_index(torrent.json["images"], fn(x) -> x == img end) +1 %>)" alt="<%= img %>">
+            <% end %>
+          <% end %>
+        </div>
 
       </div>
       <div class="float close cursor" onclick="closeModal('<%= torrent.id %>myModal')"></div>
@@ -50,7 +56,7 @@
 
 <div class="videos">
   <%= unless is_nil(torrent.json["video"]) or torrent.json["video"] == [] do %>
-    <img width="40" id="videoIcon<%= torrent.torrent_id %>" style="float: right"src="https://www.squ.edu.om/portals/5/youtube-icon.png" onclick="document.getElementById('videoIcon<%= torrent.torrent_id %>').style.display = 'none';toggle_visibility('video<%= torrent.torrent_id %>');" />
+    <img width="40" id="videoIcon<%= torrent.torrent_id %>" class="float" src="https://www.squ.edu.om/portals/5/youtube-icon.png" onclick="document.getElementById('videoIcon<%= torrent.torrent_id %>').style.display = 'none';toggle_visibility('video<%= torrent.torrent_id %>');" />
     <div width="50%" style="display: none" id="video<%= torrent.torrent_id %>">
       <iframe class="lazy" width="100%" height="315" data-src="https://www.youtube.com/embed/<%= torrent.json["video"] %>" allowfullscreen></iframe>
     </div>
