--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -143,7 +143,7 @@ caption   { display: table-caption }
   cursor: pointer;
   position: absolute;
   top: 5em;
-  width: auto;
+  width: 30%;
   height: 60%;
   padding: 16px;
   margin-top: -50px;
@@ -159,13 +159,14 @@ caption   { display: table-caption }
 /* Position the "next button" to the right */
 .modal .next {
   right: 0;
+  text-align: right;
   border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
 .modal .prev:hover,
 .modal .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 /* Number text (1/3 etc) */
