--- a/web/templates/torrent/torrents.html.eex
+++ b/web/templates/torrent/torrents.html.eex
@@ -4,9 +4,9 @@
 <ul id="torrentsList">
 <%= for torrent <- @torrents do %>
   <li>
-    <div class="thumbnail link" onclick="toggle_visibility('torrent<%= torrent.torrent_id %>');" >
+    <div class="thumbnail link" onclick="toggle_display('torrent<%= torrent.torrent_id %>');toggle_displayBasedOn('torrent<%= torrent.torrent_id %>', 'thumbpopup<%= torrent.torrent_id %>');" >
       <%= torrent.name %>
-      <span>
+      <span id="thumbpopup<%= torrent.torrent_id %>">
         <img class="lazy" src="images/<%= unless is_nil(torrent.json["images"]) or torrent.json["images"] == [], do: torrent.json["images"] |> Enum.at(0) |> String.trim |> String.replace("http://", "") |> String.replace("http://", "") |> URI.decode() %>" />
         </span>
     </div>
