toggle_visibility to toggle_display

--- a/web/templates/torrent/torrentMedia.html.eex
+++ b/web/templates/torrent/torrentMedia.html.eex
@@ -65,7 +65,7 @@ end %>
 
 <div class="videos">
   <%= unless is_nil(torrent.json["video"]) or torrent.json["video"] == [] do %>
-    <img width="40" id="videoIcon<%= torrent.torrent_id %>" class="float" src="https://www.squ.edu.om/portals/5/youtube-icon.png" onclick="document.getElementById('videoIcon<%= torrent.torrent_id %>').style.display = 'none';toggle_visibility('video<%= torrent.torrent_id %>');" />
+    <img width="40" id="videoIcon<%= torrent.torrent_id %>" class="float" src="https://www.squ.edu.om/portals/5/youtube-icon.png" onclick="document.getElementById('videoIcon<%= torrent.torrent_id %>').style.display = 'none';toggle_display('video<%= torrent.torrent_id %>');" />
     <div width="50%" style="display: none" id="video<%= torrent.torrent_id %>">
       <iframe class="lazy" width="100%" height="315" data-src="https://www.youtube.com/embed/<%= torrent.json["video"] %>" allowfullscreen></iframe>
     </div>
