--- a/web/templates/tracker/show.html.eex
+++ b/web/templates/tracker/show.html.eex
@@ -54,7 +54,7 @@
 
   <li>
     <strong>Patterns:</strong>
-    <%= @tracker.patterns %>
+    <span class="pre"><%= Poison.encode!(@tracker.patterns) |> String.replace(",\"", ",\n\"") %></span>
   </li>
 
 </ul>
