--- a/web/templates/tracker/show.html.eex
+++ b/web/templates/tracker/show.html.eex
@@ -23,6 +23,11 @@
   </li>
 
   <li>
+    <strong>InfoUrl:</strong>
+    <%= @tracker.infoUrl %>
+  </li>
+
+  <li>
     <strong>PagesAtOnce:</strong>
     <%= @tracker.pagesAtOnce %>
   </li>
