--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -7,7 +7,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hello Torr!</title>
+    <title>Torr</title>
+    <link rel="shortcut icon" href="<%= static_path(@conn, "/favicon.ico") %>" type="image/ico" />
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
