load images directly from remote host

--- a/web/templates/torrent/index.html.eex
+++ b/web/templates/torrent/index.html.eex
@@ -17,10 +17,13 @@
         <header>Trackers</header>
         <ul class="checked">
           <li class="enabled active" >
-            <span class="filterText">Zamunda</span>
+            <span class="filterText">All</span>
           </li>
         </ul>
         <ul class="unchecked scrollable">
+          <li class="enabled active" >
+            <span class="filterText">Zamunda</span>
+          </li>
           <li class="enabled" >
             <span class="filterText">zelka.org</span>
           </li>
@@ -33,16 +36,35 @@
       <div class="property-box resizable" style="min-height: 50px; resize: vertical; overflow: auto;">
         <header>sorting</header>
         <ul class="checked">
-          <li class="enabled active" >
-            <span class="filterText">name</span>
+          <li class="enabled" >
+            <span class="filterText">Added</span>
+            <span class="filterText"> desc</span>
           </li>
         </ul>
         <ul class="unchecked scrollable">
-          <li class="enabled" >
-            <span class="filterText">type</span>
+          <li class="enabled active" >
+            <span class="filterText">name</span>
+            <span class="filterText"> asc</span>
           </li>
           <li class="enabled" >
-            <span class="filterText">added</span>
+            <span class="filterText">Type</span>
+            <span class="filterText"> asc</span>
+          </li>
+          <li class="enabled" >
+            <span class="filterText">Genre</span>
+            <span class="filterText"> asc</span>
+          </li>
+          <li class="enabled" >
+            <span class="filterText">Peers</span>
+            <span class="filterText"> asc</span>
+          </li>
+          <li class="enabled" >
+            <span class="filterText">Size</span>
+            <span class="filterText"> asc</span>
+          </li>
+          <li class="enabled" >
+            <span class="filterText">Rating</span>
+            <span class="filterText"> asc</span>
           </li>
         </ul>
       </div>
