--- a/web/templates/torrent/torrents.html.eex
+++ b/web/templates/torrent/torrents.html.eex
@@ -25,7 +25,19 @@
           <div class="cell">Peers</div>
         </div>
         <div class="row">
-          <div class="cell"><a href="<%= torrent.tracker.url <> "download.php/" <> torrent.torrent_id <> "/" <> URI.encode(torrent.json["Download"] |> String.split("\s") |> Enum.at(0) |> String.split("\t") |> Enum.at(0)) <> ".torrent" %>"><%= torrent.json["Download"] %></a></div>
+          <div class="cell">
+                <%= unless is_nil(torrent.json["Download"]) or (torrent.json["Download"] |> String.trim == "") do %>
+                      <a href="<%= torrent.tracker.url <> "download.php/"
+                                                             <> torrent.torrent_id
+                                                             <> "/" <> URI.encode(torrent.json["Download"]
+                                                                       |> String.trim
+                                                                       |> String.split("\s")
+                                                                       |> Enum.at(0)
+                                                                       |> String.split("\t")
+                                                                       |> Enum.at(0))
+                                                             <> ".torrent" %>"><%= torrent.json["Download"] %></a>
+                <% end %>
+          </div>
           <div class="cell"><%= torrent.json["Type"] %></div>
           <div class="cell"><%= torrent.json["Genre"] %></div>
           <div class="cell"><%= torrent.json["Added"] %></div>
